--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
 
       <!-- Jumbotron Section -->
-      <div class="container">
+      <div class="container" id="main-page">
         <div class="jumbotron text-white text-left bg-transparent">
           <h1 class="display-3 my-0">Hello!</h1>
           <p class="lead py-3">Please Join our Community to Help <br>Save our Furry Friends!</p>
