--- a/testimonial.html
+++ b/testimonial.html
@@ -55,11 +55,11 @@
     <!-- Second Card Container -->
 
       <div class="card" style="width: 18rem;">
-        <img src="http://www.mypetsbrace.com/portal/uploads//DSC04015.JPG" class="card-img" id="chambers_pic">
+        <img src="https://images.unsplash.com/photo-1606231106595-30ebc70aa72b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" class="card-img" id="chambers_pic">
         <div class="card-body">
           <h5 class="card-title">Say Hello to Chambers!</h5>
               <p class="card-text">"Chambers suffered from a severe accident that caused a fracture. I can't thank Poochie Care enough for they're consistent support!"</p>
-              <footer class="blockquote-footer">Dan  Wilson</footer>
+              <footer class="blockquote-footer">Daniel  Lee</footer>
     
               <p class="card-text"><small class="text-muted">Last updated 1 day ago</small></p>
         </div>
